[tool.poetry]
name = "overlapindex"
version = "0.1.0"
description = "OverlapIndex (OI), an Incremental Cluster Validity index for identifying the degree of overlap of data classes."
authors = ["Niklas M. Melton <niklasmelton@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/NiklasMelton/OverlapIndex"
repository = "https://github.com/NiklasMelton/OverlapIndex"
documentation = "https://github.com/NiklasMelton/OverlapIndex"
keywords = ["incremental cluster validity", "cluster validity", "ART", "machine learning", "transfer learning", "clustering"]

# Single-file module (repo root)
packages = [{ include = "overlapindex" }]

[tool.poetry.dependencies]
python = ">=3.9"
artlib = ">=0.1.7,<0.2.0"
numpy = ">=2.4.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
