[tool.poetry]
name = "overlapindex"
version = "0.1.2"
description = "OverlapIndex (OI), an Incremental Cluster Validity index for identifying the degree of overlap of data classes."
authors = ["Niklas M. Melton <niklasmelton@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/NiklasMelton/OverlapIndex"
repository = "https://github.com/NiklasMelton/OverlapIndex"
documentation = "https://github.com/NiklasMelton/OverlapIndex"
keywords = ["incremental cluster validity", "cluster validity", "ART", "machine learning", "transfer learning", "clustering"]

packages = [{ include = "overlapindex" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.15"
artlib = { version = ">=0.1.10,<0.2.0", optional = true, python = ">=3.9,<3.15" }
matplotlib = [
    { version = ">=3.9.4,<3.10.0", optional = true, python = ">=3.9,<3.10" },
    { version = ">=3.10.8,<4.0.0", optional = true, python = ">=3.10,<3.15" },
]
numpy = ">=2.0.0,<3.0.0"
scikit-learn = ">=1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry.extras]
art = ["artlib", "matplotlib"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
